add a fine-tune example on the MOOD hackathon

--- a/nlp_pratical_session_BERT.ipynb
+++ b/nlp_pratical_session_BERT.ipynb
@@ -405,10 +405,211 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.4 Text generation with BERT"
+    "## 1.4 Fine-tuning\n",
+    "**Use case**: Epidemiological surveillance (Event-based) for AMR (Anti Microbial Resistance)\n",
+    "\n",
+    "The aims of this section is to train, from a pre-trained BERT model, a text classification of news (press articles):\n",
+    "\n",
+    "+ \"New Information\": The new is dealing with an outbreak\n",
+    "+ \"General Information\": The press article is in the theme (it talks about AMR) but does not mention any new emergence\n",
+    "+ \"Not relevant\": the press article is off-topic\n",
+    "\n",
+    "The data sources are:\n",
+    "\n",
+    "+ [ProMED](https://promedmail.org/); From the International Society of Infectious Diseases (ISID) since 1994, expert moderators provide written commentary (a context) to the press articles reported.\n",
+    "+ [HealthMap](https://www.healthmap.org): Is an automated and curated aggregator of a broad range of data sources (Twitter, Google News, Baidu and ProMED)\n",
+    "+ [MedISys](https://medisys.newsbrief.eu/medisys/homeedition/en/home.html): A web-based information monitoring system developped by the European Comission \n",
+    "+ [PADI-web](https://padi-web.cirad.fr/); Partly developed by researchers from UMR TETIS and used by the French epidemix intellignece team in animal health. It's an autmated tool that monitors the Google News aggregator in sixteen languages.\n",
+    "\n",
+    "The data is accessible at the following link: [MOOD - News AMR dataset - Hackathon 2022](https://entrepot.recherche.data.gouv.fr/dataset.xhtml?persistentId=doi:10.57745/MPNSPH). It comes from the [MOOD](https://mood-h2020.eu/time-for-a-mood-hack-antimicrobial-resistance-hackathon/) project.\n",
+    "\n",
+    "\n",
+    "![MOOD](https://mood-h2020.eu/wp-content/uploads/2020/10/logo_Mood_cmjn_black-1.jpg)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4.1 Download the data and upload it to your notebook\n",
+    "\n",
+    "1. Download the data (giving your personnal information is not mandatory, you can supply click on the accept button)\n",
+    "2. Extract the 4 files beginning with `D1_`\n",
+    "3. Upload in colab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import files\n",
+    "uploaded = files.upload()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4.2 Prepare the data for the training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import io\n",
+    "import pandas as p\n",
+    "\n",
+    "df = pd.DataFrame()\n",
+    "df_tmp = pd.DataFrame()\n",
+    "\n",
+    "for filename in uploaded:\n",
+    "  df_tmp = pd.read_csv(io.StringIO(uploaded[filename].decode(\"utf-8\")), sep = \",\")\n",
+    "  df = pd.concat([df, df_tmp], ignore_index=True)\n",
+    "\n",
+    "# filter out \"don't know\"\n",
+    "df = df[df[\"Classification1\"] != \"Don't know\"]\n",
+    "\n",
+    "# filter out Null values\n",
+    "df = df[df[\"Title\"].isna() == False]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datasets\n",
+    "from datasets import Dataset, DatasetDict\n",
+    "from datasets import ClassLabel\n",
+    "\n",
+    "df[\"label_name\"] = df[\"Classification1\"]\n",
+    "df[\"label\"] = pd.Categorical(df[\"label_name\"], ordered=True).codes\n",
+    "\n",
+    "mapLabels = pd.DataFrame(df.groupby(['label_name', 'label']).count())\n",
+    "#drop count column\n",
+    "# mapLabels.drop(['news'], axis = 1, inplace = True)\n",
+    "label2Index = mapLabels.to_dict(orient='index')\n",
+    "index2label = {}\n",
+    "for key in label2Index:\n",
+    "  print (f\"{key[1]} -> {key[0]}\")\n",
+    "  index2label[key[1]] = key[0]\n",
+    "print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = Dataset.from_pandas(df[[\"Title\", \"label\"]])\n",
+    "dataset = dataset.train_test_split(test_size=0.1)\n",
+    "print(dataset)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4.3 Prepare the model for the training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " pretrained_model = 'bert-base-uncased'\n",
+    "\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+    "tokenizer = AutoTokenizer.from_pretrained(pretrained_model)\n",
+    "import numpy as np\n",
+    "\n",
+    "def tokenize_function(batch):\n",
+    "    try:\n",
+    "        tokenized_batch = tokenizer(batch['Title'], padding=True, truncation=True, max_length=128)\n",
+    "        return tokenized_batch\n",
+    "    except:\n",
+    "        print(f\"error with Title: {batch['Title']}\")\n",
+    "        print(f\"error with Title len: {len(batch['Title'])}\")\n",
+    "                     \n",
+    "# tokenized_datasets = dataset.map(tokenize_function, batched=True)\n",
+    "tokenized_datasets = dataset.map(tokenize_function, batched=True)\n",
+    "# mélanger les jeux de données:\n",
+    "small_train_dataset = tokenized_datasets[\"train\"].shuffle(seed=42)\n",
+    "small_eval_dataset = tokenized_datasets[\"test\"].shuffle(seed=42)\n",
+    "\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(pretrained_model, num_labels=3)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4.4 Train the model!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import TrainingArguments, Trainer\n",
+    "import numpy as np\n",
+    "from datasets import load_metric\n",
+    "\n",
+    "metric = load_metric(\"accuracy\")\n",
+    "def compute_metrics(eval_pred):\n",
+    "    logits, labels = eval_pred\n",
+    "    predictions = np.argmax(logits, axis=-1)\n",
+    "    print(metric.compute(predictions=predictions, references=labels))\n",
+    "    return metric.compute(predictions=predictions, references=labels)\n",
+    "\n",
+    "training_args = TrainingArguments(output_dir=\"test_trainer\", \n",
+    "                                  evaluation_strategy=\"epoch\", \n",
+    "                                  save_strategy=\"epoch\",\n",
+    "                                  load_best_model_at_end=True)\n",
+    "\n",
+    "trainer = Trainer(\n",
+    "    model=model,\n",
+    "    args=training_args,\n",
+    "    train_dataset=small_train_dataset,\n",
+    "    eval_dataset=small_eval_dataset,\n",
+    "    compute_metrics=compute_metrics,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " trainer.train()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.5 Text generation with BERT"
    ]
   },
   {
