correct typo on the BERT notebook

--- a/nlp_pratical_session_BERT.ipynb
+++ b/nlp_pratical_session_BERT.ipynb
@@ -440,7 +440,7 @@
     "\n",
     "1. Download the data (giving your personnal information is not mandatory, you can supply click on the accept button)\n",
     "2. Extract the 4 files beginning with `D1_`\n",
-    "3. Upload in colab"
+    "3. Upload them to colab"
    ]
   },
   {
@@ -458,7 +458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.4.2 Prepare the data for the training"
+    "### 1.4.2 Prepare the data for training"
    ]
   },
   {
@@ -524,7 +524,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.4.3 Prepare the model for the training"
+    "### 1.4.3 Prepare the model for training"
    ]
   },
   {
