correct typo in ChatGPT notebook

--- a/nlp_pratical_session_ChatGPT.ipynb
+++ b/nlp_pratical_session_ChatGPT.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "------------------------\n",
     "# Chapter 2: ChatGPT\n",
-    "[ChatGPT](https://chat.openai.com) is an AI chatbot developed by OpenAI. ChatGPT uses a generative language model called GPT-3.5 without subscription and GPT-4 for 20€/month.\n",
+    "[ChatGPT](https://chat.openai.com) is an AI chatbot developed by OpenAI. ChatGPT uses a generative language model called GPT-3.5 without subscription and GPT-4 for $20/month.\n",
     "\n",
     "## 2.1 Requirements\n",
     "As we are going to use ChatGPT through the [OpenAI API](https://platform.openai.com/), participants need to create a account in order to obtain an API key: [here](https://platform.openai.com/)\n",
@@ -104,7 +104,7 @@
    "source": [
     "## 2.2 Text generation with ChatGPT\n",
     "\n",
-    "Let's now try the same text generation that we tried with bert"
+    "Let's now try the same text generation that we tried with BERT"
    ]
   },
   {
@@ -235,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3.1 With HuggingFace API\n",
+    "### 2.3.2 With HuggingFace API\n",
     "\n",
     "Same procedure as for OpenAI ChatGPT, we need a HuggingFace API key. Follow this link to have [instructions to get your HuggingFace API key](https://huggingface.co/docs/api-inference/quicktour#get-your-api-token)"
    ]
