add link to donwload data for BERT fine-tuning

--- a/nlp_pratical_session_BERT.ipynb
+++ b/nlp_pratical_session_BERT.ipynb
@@ -438,7 +438,7 @@
    "source": [
     "### 1.4.1 Download the data and upload it to your notebook\n",
     "\n",
-    "1. Download the data (giving your personnal information is not mandatory, you can supply click on the accept button)\n",
+    "1. Download the data (giving your personnal information is not mandatory, you can supply click on the accept button): [from the following link](https://entrepot.recherche.data.gouv.fr/dataset.xhtml?persistentId=doi:10.57745/MPNSPH)\n",
     "2. Extract the 4 files beginning with `D1_`\n",
     "3. Upload them to colab"
    ]
