add a small introductive sentence for langchain ChatGPT section

--- a/nlp_pratical_session_ChatGPT.ipynb
+++ b/nlp_pratical_session_ChatGPT.ipynb
@@ -312,7 +312,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3.2 With ChatGPT"
+    "### 2.3.2 With ChatGPT\n",
+    "\n",
+    "Langchain also works with ChatGPT the same way. "
    ]
   },
   {
