revoke api keu after leaking

--- a/nlp_pratical_session_ChatGPT.ipynb
+++ b/nlp_pratical_session_ChatGPT.ipynb
@@ -459,7 +459,7 @@
       "source": [
         "import os\n",
         "\n",
-        "os.environ[\"OPENAI_API_KEY\"] = \"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\""
+        "os.environ[\"OPENAI_API_KEY\"] = \"sk-...\""
       ]
     },
     {
